added support for hiding/dimming zeros and grid lines

--- a/css/xtab.css
+++ b/css/xtab.css
@@ -93,6 +93,12 @@
   position: absolute;
 }
 
+.xtab-vals div.xtab-grid {
+  position: absolute;
+  background-color: #ddd;
+  width: 100%;
+}
+
 .xtab-vals div {
   position: absolute;
   text-align: right;
